@@ -909,7 +909,7 @@ cl_symbols[] = {
 {"WARN", CL_ORDINARY, NULL, -1, OBJNULL},
 {"WARNING", CL_ORDINARY, NULL, -1, OBJNULL},
 {"WHEN", CL_FORM, NULL, -1, OBJNULL},
-{"WILD-PATHNAME-P", CL_ORDINARY, NULL, -1, OBJNULL},
+{"WILD-PATHNAME-P", CL_ORDINARY, cl_wild_pathname_p, -1, OBJNULL},
 {"WITH-COMPILATION-UNIT", CL_ORDINARY, NULL, -1, OBJNULL},
 {"WITH-CONDITION-RESTARTS", CL_ORDINARY, NULL, -1, OBJNULL},
 {"WITH-HASH-TABLE-ITERATOR", CL_ORDINARY, NULL, -1, OBJNULL},
