@@ -733,6 +733,7 @@
 (PATHNAME-NAME (T) T)
 (PATHNAME-TYPE (T) T)
 (PATHNAME-VERSION (T) T)
+(WILD-PATHNAME-P (T *) T)
 (NAMESTRING (T) string NIL NIL)
 (FILE-NAMESTRING (T) STRING)
 (DIRECTORY-NAMESTRING (T) STRING)
