@@ -1823,6 +1823,8 @@ ECL 0.9d
     class A and this class is renamed as B, the method still
     specializes on the same class.
 
+  - Implemented WILD-PATHNAME-P.
+
 TODO:
 =====
 
